# demo-development-tool-agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
data/: documentation.json  documentation_v2.json  hr_policies.json
evaluation/: run_eval.py  trulens_eval.py  trulens_results.json
src/: __init__.py  agent.py  prompts_v1.py  prompts_v2.py  tools.py
