[project]
name = "demo-development-tool-agent"
version = "0.1.0"
description = "Deboxx Poland Demo - Internal Developer Assistant with AgentGPA evaluation"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "trulens>=2.8",
    "trulens-providers-cortex>=2.8",
]

[project.scripts]
demo = "main:demo"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "S101",   # Use of assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = ["ruff>=0.11"]

[tool.uv]
override-dependencies = [
    "llvmlite>=0.43",
    "numba>=0.60",
]
